--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -10,7 +10,7 @@ html {
   background-color: $background-color;
   font-size: 18px;
 
- /* @include breakpoint($medium) {
+  @include breakpoint($medium) {
     font-size: 18px;
   }
 
@@ -19,8 +19,8 @@ html {
   }
 
   @include breakpoint($x-large) {
-    font-size: 22px;
-  }*/
+    font-size: 20px;
+  }
 
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
