--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -3,7 +3,7 @@ img.img_responsive{max-width:100%;height:auto;display:block}
 div.authors a:link,
 div.authors a:visited{color:#000000}
 div.img {display:inline-block;zoom:1;display*:inline;text-align:left;margin-left:auto;margin-right:auto;vertical-align:middle; padding-left:20px;padding-right:20px}
-div.text {display:inline-block;zoom:1;display*:inline;text-align:left;margin-left:auto;margin-right:auto;vertical-align:middle;max-width:1500px; padding-left:20px;padding-right:20px}
+div.text {display:inline-block;zoom:1;display*:inline;text-align:left;margin-left:auto;margin-right:auto;vertical-align:middle; padding-left:20px;padding-right:20px}
 div.publication{padding-top:0px;padding-bottom:0px}
 div.publication div.img{max-width:300px;padding-right:10px}
 div.publication div.text{text-align:left}
@@ -11,8 +11,6 @@ div.publication div.text{text-align:left}
 @media only screen and (max-width: 64em) {
     div.publication div.img{display:none}
     div.publication div.text{text-align:left}
-    div.publication {padding-top:0px;padding-bottom:10px}
-    body{font-size:80%}
     div.twitter_feed{display:none}
 }
 @media only screen and (min-width: 64em) {
