--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -1,4 +1,3 @@
-div.title a{ TEXT-DECORATION:none; color: #990000;}a:hover{TEXT-DECORATION: underline;}
 img.img_responsive{max-width:100%;height:auto;display:block}
 div.authors a:link,
 div.authors a:visited{color:#000000}
@@ -7,6 +6,7 @@ div.text {display:inline-block;zoom:1;display*:inline;text-align:left;margin-lef
 div.publication{padding-top:0px;padding-bottom:0px}
 div.publication div.img{max-width:300px;padding-right:10px}
 div.publication div.text{text-align:left}
+div.publication div.text div.title{font-weight:bold}
 
 @media only screen and (max-width: 128em) {
     div.publication div.img{display:none}
