--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -17,3 +17,6 @@ div.publication div.text div.title{font-weight:500}
     div.publication div.img{max-width:23%}
     div.publication div.text{max-width:72%;text-align:left}
 }
+
+<style>a1{ TEXT-DECORATION:none; color: #990000;}a:hover{TEXT-DECORATION:underline; color: #990000;}</style>
+<style>a2{font-weight:500;}</style>
