--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -18,5 +18,5 @@ div.publication div.text div.title{font-weight:500}
     div.publication div.text{max-width:72%;text-align:left}
 }
 
-<style>a1{ TEXT-DECORATION:none; color: #990000;}a:hover{TEXT-DECORATION:underline; color: #990000;}</style>
-<style>a2{font-weight:500;}</style>
+<style>a-1{TEXT-DECORATION:none; color: #990000;}a-1:hover{TEXT-DECORATION:underline; color: #990000;}</style>
+<style>a-2{font-weight:500;}</style>
