--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -7,55 +7,38 @@
    ========================================================================== */
 
 .sidebar {
+  -webkit-transform: translate3d(0, 0 , 0);
+          transform: translate3d(0, 0 , 0);
+
   @include clearfix();
-  @include breakpoint(max-width $large) {
-    /* fix z-index order of follow links */
-    position: relative;
-    z-index: 10;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
+  margin-bottom: 1em;
 
   @include breakpoint($large) {
-    float: left;
-    width: calc(#{$right-sidebar-width-narrow} - 1em);
-    opacity: 0.75;
+    @include span(2 of 12);
+    opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out;
+            transition: opacity 0.2s ease-in-out;
 
     &:hover {
       opacity: 1;
     }
-
-    &.sticky {
-      overflow-y: auto;
-      /* calculate height of nav list
-         viewport height - nav height - masthead x-padding
-      */
-      height: calc(100vh - #{$nav-height} - 2em);
-    }
   }
+
 
   @include breakpoint($x-large) {
-    width: calc(#{$right-sidebar-width} - 1em);
+    padding-right: 0;
   }
 
-  > * {
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+  h2, h3, h4, h5, h6 {
     margin-bottom: 0;
     font-family: $sans-serif-narrow;
   }
 
-  p,
-  li {
+  h3, h4 {
+    font-size: $type-size-5;
+  }
+
+  p, li {
     font-family: $sans-serif;
     font-size: $type-size-6;
     line-height: 1.5;
@@ -63,11 +46,6 @@
 
   img {
     width: 100%;
-    
-    &.emoji {
-      width: 20px;
-      height: 20px;
-    }
   }
 }
 
@@ -75,38 +53,15 @@
   margin-bottom: 1em;
 
   @include breakpoint($large) {
-    position: absolute;
-    top: 0;
-    right: 0;
+    position: relative;
+    float: right;
     width: $right-sidebar-width-narrow;
-    margin-right: -1 * $right-sidebar-width-narrow;
-    padding-left: 1em;
+    margin-left: span(0.5 of 12);
     z-index: 10;
-
-    &.sticky {
-      @include clearfix();
-      position: -webkit-sticky;
-      position: sticky;
-      top: 2em;
-      float: right;
-    }
   }
 
   @include breakpoint($x-large) {
     width: $right-sidebar-width;
-    margin-right: -1 * $right-sidebar-width;
-  }
-}
-
-.splash .sidebar__right {
-  @include breakpoint($large) {
-    position: relative;
-    float: right;
-    margin-right: 0;
-  }
-
-  @include breakpoint($x-large) {
-    margin-right: 0;
   }
 }
 
@@ -118,7 +73,8 @@
   display: table-cell;
   vertical-align: top;
   width: 36px;
-  height: 36px;
+  // set width only, for non-square avatars
+  // height: 36px;
 
   @include breakpoint($large) {
     display: block;
@@ -127,7 +83,7 @@
   }
 
   img {
-    max-width: 166px;
+    max-width: 175px;
     border-radius: 50%;
 
     @include breakpoint($large) {
@@ -140,7 +96,7 @@
 .author__content {
   display: table-cell;
   vertical-align: top;
-  padding-left: 30px;
+  padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
 
@@ -150,17 +106,10 @@
     padding-left: 0;
     padding-right: 0;
   }
-
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
 }
 
 .author__name {
   margin: 0;
-  padding-left: 30px;
-  margin-left : 30px;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -169,15 +118,11 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size;
-  padding-left: 30px;
-  margin-left : 30px;
+  font-size: $type-size-5;
 }
 
 .author__bio {
   margin: 0;
-  padding-left: 30px;
-  margin-left : 30px;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -222,14 +167,10 @@
   list-style-type: none;
   border: 1px solid $border-color;
   border-radius: $border-radius;
-  background: $background-color;
+  background: #fff;
   z-index: -1;
-  box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
+  box-shadow: 0 0 10px rgba(#000, 0.25);
   cursor: default;
-
-  &.is--visible {
-    display: block;
-  }
 
   @include breakpoint($large) {
     display: block;
@@ -267,7 +208,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: $background-color transparent;
+    border-color: #fff transparent;
     z-index: 1;
 
     @include breakpoint($large) {
@@ -282,12 +223,11 @@
   a {
     display: block;
     margin-bottom: 5px;
-    padding-left: 15px;
     padding-right: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
     color: inherit;
-    font-size: $type-size;
+    font-size: $type-size-5;
     text-decoration: none;
 
     &:hover {
@@ -295,31 +235,3 @@
     }
   }
 }
-
-/*
-   Wide Pages
-   ========================================================================== */
-
-.wide .sidebar__right {
-  margin-bottom: 1em;
-
-  @include breakpoint($large) {
-    position: initial;
-    top: initial;
-    right: initial;
-    width: initial;
-    margin-right: initial;
-    padding-left: initial;
-    z-index: initial;
-
-    &.sticky {
-      float: none;
-    }
-  }
-
-  @include breakpoint($x-large) {
-    width: initial;
-    margin-right: initial;
-  }
-}
-
