change theme color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
   --global-code-bg-color: rgba(181, 9, 172, 0.05);
   --global-text-color: #000000;
   --global-text-color-light: #828282;
-  --global-theme-color: #b22222;
+  --global-theme-color: #F29105;
   --global-hover-color: #b22222;
   --global-footer-bg-color: #ffffff;
   --global-footer-text-color: #1C1C1D;
