--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,8 +10,8 @@
   --global-code-bg-color: rgba(181, 9, 172, 0.05);
   --global-text-color: #000000;
   --global-text-color-light: #828282;
-  --global-theme-color: #F29105;
-  --global-hover-color: #b22222;
+  --global-theme-color: #de773f;
+  --global-hover-color: #de773f;
   --global-footer-bg-color: #ffffff;
   --global-footer-text-color: #1C1C1D;
   --global-footer-link-color: #828282;
